# state_ai_report

./: .gitignore  Lakehouse-Delta Lake.md  PrintModelConfig.py  README.md  RM LLM courses.md  RM Lakehouse-Delta Lake.md  RM Llamaindex Ollama.md  RM Ollama.md  RM Rag indexing algorithm.md  RM Rag.md  RM Torch Cuda.md  RM arte silicon fucking valley.md  RM embeddings_space.md  RM fine_tuning_model.md  RM hugging-face.md  RM numbers.md  RM powershell.md  embedding_space.py  fine_tuning_model.md  gensim.py  gpt3.md  lakehouse.md  myOpenai.py  myTestAutoModelForCausalLM.py  ollama-hugging-face.md  pyproject.toml  start_of_ai_report.md  umap.md
LLM Engineer Handbook/: RM LLM Engineer Handbook.md  RM LLM Twin.md
SVD/: SVD.md  matrix.ipynb  svd.ipynb
UMAP/: 01_penguins.ipynb  04_Plotting UMAP results.ipynb  umap.md  umap_03_basic umap parameters.ipynb
docs source/Images/Chapter 2/: Figure 2.5png
